[package]
name = "su"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", default-features = false, features = ["color", "derive", "env", "help", "std", "suggestions", "unicode", "usage", "wrap_help"] }
users = { version = "0.11.0", default-features = false }

[profile.release]
lto = "fat"
strip = "symbols"